<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/servicesFragment"
        android:icon="@drawable/ic_services"
        android:title="@string/nav_services" />

    <item
        android:id="@+id/infoFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/nav_info" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/adminFragment"
        android:icon="@drawable/ic_admin"
        android:title="@string/nav_admin" />

</menu>
