<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.massagecentr.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/servicesFragment"
        android:name="com.example.massagecentr.services.ServicesFragment"
        android:label="@string/nav_services" />

    <fragment
        android:id="@+id/infoFragment"
        android:name="com.example.massagecentr.info.InfoFragment"
        android:label="@string/nav_info" />

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.massagecentr.chat.ChatFragment"
        android:label="@string/nav_chat" />

</navigation>
